--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 }
 
 body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -14,17 +18,25 @@ main{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100%;
+  width: 90%;
+}
+
+main, img, .top-section {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .top-section{
   border: 1px solid orange;
-  width: 90%;
-  height: 250px;
+  width: 100%;
+}
+
+.top-section img {
+  width: 100%;
 }
 
 .bottom-section{
-  border: 1px solid orange;
-  width: 40%;
+  border: 1px solid red;
+  width: 100%;
   height: 250px;
 }
