--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ main{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 90%;
+  width: 80%;
 }
 
 main, img, .top-section {
@@ -27,7 +27,7 @@ main, img, .top-section {
 }
 
 .top-section{
-  border: 1px solid orange;
+  /* border: 1px solid orange; */
   width: 100%;
 }
 
@@ -35,8 +35,12 @@ main, img, .top-section {
   width: 100%;
 }
 
+section{
+  border: 1px solid green;
+  margin: 0 10px 0 10px;
+}
+
 .bottom-section{
   border: 1px solid red;
   width: 100%;
-  height: 250px;
 }
