--- a/style.css
+++ b/style.css
@@ -1,6 +1,24 @@
 *{
   .attribution { font-size: 11px; text-align: center; }
   .attribution a { color: hsl(228, 45%, 44%); }
+  font-family: var(--Montserrat-font);
+  /* font-family: "Fraunces", serif; */
+}
+
+:root{
+
+  /* Primary */
+  --Dark-cyan: hsl(158, 36%, 37%);
+  --Cream: hsl(30, 38%, 92%);
+
+  /* Neutral */
+  --Very-dark-blue: hsl(212, 21%, 14%);
+  --Dark-grayish-blue: hsl(228, 12%, 48%);
+  --White: hsl(0, 0%, 100%);
+
+  /* Font */
+  --Montserrat-font: "Montserrat", serif;
+  --Fraunces-font: "Fraunces", serif;
 }
 
 body{
@@ -25,7 +43,7 @@ main, img, .top-section {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
-
+/*********************  ************************/
 .top-section{
   /* border: 1px solid orange; */
   width: 100%;
@@ -34,13 +52,20 @@ main, img, .top-section {
 .top-section img {
   width: 100%;
 }
+/*********************  ************************/
+
+.bottom-section{
+  border: 1px solid red;
+  width: 100%;
+}
 
 section{
   border: 1px solid green;
   margin: 0 10px 0 10px;
 }
 
-.bottom-section{
-  border: 1px solid red;
-  width: 100%;
+.sub-title{
+  font-size: 1em;
+  letter-spacing: .4em;
+  text-transform: uppercase;
 }
