added font size, weight plus styling for sub-title and product-name

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 *{
   .attribution { font-size: 11px; text-align: center; }
   .attribution a { color: hsl(228, 45%, 44%); }
-  font-family: var(--Montserrat-font);
   /* font-family: "Fraunces", serif; */
 }
 
@@ -28,6 +27,8 @@ body{
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  font-family: var(--Montserrat-font);
+
 }
 
 main{
@@ -65,7 +66,18 @@ section{
 }
 
 .sub-title{
-  font-size: 1em;
+  font-size: .9em;
+  font-weight: 500;
+  color: var(--Dark-grayish-blue);
   letter-spacing: .4em;
   text-transform: uppercase;
+}
+
+.product-name{
+  font-family: var(--Fraunces-font);
+  font-size: 2em;
+}
+
+.product-name h1{
+  margin: .2em 0 .2em 0;
 }
